--- a/configs/rl_experiment/my_hopper/gibo.yaml
+++ b/configs/rl_experiment/my_hopper/gibo.yaml
@@ -1,49 +1,50 @@
-method: gibo  # gibo or mpd
+method: gibo
 
 wandb_config:
-    project_name: zoofoo-swimmer
+    project_name: zoofoo-hopper
     entity: quanwustl
     name: ig-step  # ig-step
 
-out_dir: './experiments/rl_experiments/my_swimmer/gibo/'  # Directory for experiment results.
+out_dir: './experiments/rl_experiments/hopper/gibo/'  # Directory for experiment results.
 
-environment_name: Swimmer-v3
+environment_name: Hopper-v1
 mlp:
-    layers: [8,2]
+    layers: [11,3]
     discretize:
-    add_bias: False
-    state_normalization: False
+    add_bias: True
+    state_normalization: True
     manipulate_reward:
-        shift:
-        scale: 350
+        shift: 1
+        scale: 1000
 
-trials: 1
+trials: 10
 seed: 0
 # Either choose max_iterations or max_objective_calls unequal None.
 max_iterations:
-max_objective_calls: 1000
+max_objective_calls: 2000
 
 optimizer_config:
     max_samples_per_iteration: 1
     OptimizerTorch: sgd
     optimizer_torch_config:
-        lr: 0.5
-    lr_schedular:
+        lr: 1.
+        weight_decay: 0.00001
+    lr_schedular: {0: 0.6, 1000: 0.5, 2000: 0.3}
     Model: derivative_gp
     model_config:
         prior_mean: 0.
         ard_num_dims: dim_search_space  # If not None, each input dimension gets its own separate lengthscale.
-        N_max: 32
+        N_max: 128
         lengthscale_constraint:
             constraint: interval
             kwargs:
                 lower_bound: 0.01
-                upper_bound: 0.3
+                upper_bound: 0.5
         lengthscale_hyperprior:
             prior: uniform
             kwargs:
                 a: 0.01
-                b: 0.3
+                b: 0.5
         outputscale_constraint:
             constraint: greather_than
             kwargs:
@@ -64,7 +65,7 @@ optimizer_config:
         hypers:
             covar_module.base_kernel.lengthscale:
             covar_module.outputscale:
-            likelihood.noise: .01
+            likelihood.noise: .02
         no_noise_optimization: True
     optimize_acqf: bga
     optimize_acqf_config:
@@ -75,8 +76,8 @@ optimizer_config:
     bounds:
         lower_bound:
         upper_bound:
-    delta: 0.1
-    epsilon_diff_acq_value: 0.01
+    delta: 0.2
+    epsilon_diff_acq_value: 0.001
     generate_initial_data:
     standard_deviation_scaling: False
     normalize_gradient: True
