--- a/configs/rl_experiment/my_hopper/gibo_local.yaml
+++ b/configs/rl_experiment/my_hopper/gibo_local.yaml
@@ -1,9 +1,9 @@
 method: gibo
 
 wandb_config:
-    project_name: zoofoo-hopper
+    project_name: zoofoo-hopperv3
     entity: quanwustl
-    name: ig-step  # ig-step
+    name: ig-iter-outputscale_1  # ig-step
 
 out_dir: './experiments/rl_experiments/hopper/gibo/'  # Directory for experiment results.
 
@@ -17,7 +17,7 @@ mlp:
         shift: 1
         scale: 1000
 
-trials: 10
+trials: 1
 seed: 0
 # Either choose max_iterations or max_objective_calls unequal None.
 max_iterations:
@@ -48,7 +48,7 @@ optimizer_config:
         outputscale_constraint:
             constraint: greather_than
             kwargs:
-                lower_bound: 0.001
+                lower_bound: 1
         outputscale_hyperprior:
             prior: normal
             kwargs:
